--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.1",
     "npm": "^8.9.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
